manifests/magic-number/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magic-number
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magic
  template:
    metadata:
      labels:
        app: magic
    spec:
      containers:
      - name: magic
        image: ghcr.io/pglcorporate-dev/magic-number
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
