manifests/magic-number/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magic-number

spec:
  selector:
    app: magic

  ports:
    - port: 5000
      targetPort: 5000

  #type: NodePort
  type: ClusterIP #now using ingress
